--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ tokio = { version = "1.48.0", features = ["full"] }
 toml = "0.9.8"
 tracing = "0.1.43"
 tracing-subscriber = "0.3.22"
+
+[dev-dependencies]
+tempfile = "3.23.0"
